# VRChat_AI_Assistant

./: .env.example  .gitignore  COPYRIGHT  LICENSE  README.md  assistant.py  badwords.example.json  cbox-chatgpt.py  chatgpt.py  config.example.json  embeddings.py  functions.py  listening.py  main.py  memory.example.json  options.py  pyproject.toml  requirements.in  requirements.txt  start_assistant.bat  start_assistant.ps1  start_assistant.sh  texttospeech.py  uistuff.py  vision.py  vrcutils.py  whisper_online.py
.github/workflows/: pylint.yml
